--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY="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"
+OPENAI_API_KEY="sk-...........here save your key"
 PORT = 3000
